# signalFlow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  run.bat
.claude/: settings.local.json
gui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
gui/scripts/: tauri-dev-server.mjs
gui/src/: AdConfigWindow.tsx  AdStatsWindow.tsx  App.tsx  CrossfadeSettings.tsx  FileBrowserPane.tsx  IntroSettings.tsx  LevelMeter.tsx  LogPane.tsx  PlaylistView.tsx  RdsConfigWindow.tsx  SchedulePane.tsx  SettingsWindow.tsx  SilenceSettings.tsx  TransportBar.tsx  WaveformDisplay.tsx  pathUtils.ts  styles.css  types.ts
gui/src/editor/: AudioEditorModal.tsx  EditorEffectsPanel.tsx  EditorSidebar.tsx  EditorTimeline.tsx  EditorToolbar.tsx  EditorTransport.tsx  EditorWaveform.tsx  editorReducer.ts  editorStyles.css  editorTypes.ts  useEditorPlayback.ts  useEditorWaveform.ts
skills/: audio_engine.md  auto_intro.md  changelog.md  crossfade.md  gui.md  roadmap.md  scheduler.md  silence.md  todo.md  unified_architecture.md  workflow-starter-kit.md
skills/specs/: ad-inserter-spec.md  rds-engine-spec.md
src/: ad_inserter.rs  ad_logger.rs  ad_report.rs  ad_scheduler.rs  app_core.rs  audio_editor.rs  audio_runtime.rs  auto_intro.rs  engine.rs  lecture_detector.rs  level_monitor.rs  lib.rs  main.rs  now_playing.rs  player.rs  playlist.rs  rds.rs  scheduler.rs  silence.rs  track.rs  waveform.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/src/: main.rs
tests/: headless.rs
