[workspace]
members = ["src-tauri"]

[package]
name = "signal_flow"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.20"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2"
printpdf = "0.9"
dirs = "6"

[dev-dependencies]
tempfile = "3"
