[package]
name = "signalflow-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
signal_flow = { path = ".." }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
