[package]
name = "signalflow-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
signal_flow = { path = ".." }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
chrono = "0.4"
dirs = "6"
tokio = { version = "1", features = ["rt"] }
lofty = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
